gl31-master/src/test/deca/context/invalid/complet/same_name3.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 10: Erreur, une classe porte déjà ce nom
//
// Historique:
//    cree le 20/01/2021
class Test{}
class Test{}
